sass/parts/_article.scss
article{
	border-bottom: 1px solid $color-gray06;
	border-top: 1px solid $color-gray05;
	padding: 30px 0;
	position: relative;
	max-width:1000px;
	@media screen and (max-width: 800px){
		padding-bottom: 15px;
	}
	@media screen and (max-width: 600px){
		padding: 15px 0;
	}
	h2.title{
		font-size: 1.8em;
		font-weight: 300;
		line-height: 35px;
		margin-bottom: 20px;
		color: $color-main;//$color-gray01;//文章標題
		a{
			color: $color-gray01;
		}
	}
	
	.entry-content{
		line-height: 2;
		text-align: justify;
		color: $color-gray01;//內文顏色
		a{
			&:hover{
				text-decoration: underline;
				color: lighten($color-main, 20%);
			}
			color: $color-main;//文章超連結
		}
		hr{//分隔線
			margin-top: 20px;
			border-color: #ccc;
			border-width: 1px;
			border-style: solid;
		}
		.more-link{
			display: block;
			margin-top: 16px;
			padding-left: 30px;
			position: relative;
			&:before{
				content: "\f061";
				font: 1.3em $font-icon;
				line-height: 1.6em;
				position: absolute;
				left: 0;
			}
		}
		p, blockquote, ul, ol, dl, table, iframe, h1, h2, h3, h4, h5, h6, .video-container{
			margin-top: 10px;
		}
		ul, ol, dl{
			margin-left: 20px;
			ul, ol, dl{
				margin-top: 0;
			}
		}
		strong{
			font-weight: bold;
		}
		em{
			font-style: italic;
		}
		p{
			margin-top: 10px;	
		}
		h2{//Markdown ##標題
			color: #708090;//#FFFF00;
			font-weight: 600;//粗體
			//border-bottom: 1px solid $color-gray04;
			position: relative;
			&:before{
				content: "";
				position: absolute;
				bottom: -2px;
				//border-bottom: 1px solid $color-gray05;
				width: 100%;
			}
		}
		img, video{
			max-width: 100%;
			height: auto;
		}
		blockquote{
			background: $color-gray04;
			border-left: 5px solid $color-gray03;
			padding: 15px 20px;
			margin-top: 10px;
			& > p:first-of-type{
				margin-top: 0;
			}
		}
		iframe{
			border: none;
		}
		table{
			background: $color-gray04;
			border: 1px solid $color-gray03;
			border-spacing: 0;
			margin-top: 10px;
			th{
				background: $color-gray03;
				padding: 0 15px;
			}
			td{
				text-align: center;
			}
			tr{
				&:nth-of-type(2n){
					background: #d5d5d5;
				}
			}
		}
		.caption{
			display: block;
			font-size: 0.9em;
			color: $color-gray02;
			padding-left: 25px;
			position: relative;
			&:before{
				content: "\f040";
				color: $color-gray03;
				font: 1.3em $font-icon;
				line-height: 1.6em;
				position: absolute;
				left: 0;
			}
		}
		.video-container{
			position: relative;
			padding-bottom: 56.25%;
			padding-top: 30px;
			height: 0;
			overflow: hidden;
			iframe, object, embed{
				position: absolute;
				top: 0;
				left: 0;
				width: 100%;
				height: 100%;
				margin-top: 0;
			}
		}
	}
}
.share{
	padding: 15px 0;
	width: 1200px;
	border-bottom: 1px solid $color-gray06;
	border-top: 1px solid $color-gray05;
}

